# Armageddon-2.0

./: .gitignore  .gitmodules  Armageddon 2.0.sln  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  cmake_install.cmake
.github/workflows/: codeql.yml
Armageddon 2.0/: Armageddon 2.0.vcxproj  Armageddon 2.0.vcxproj.filters  CMakeLists.txt  Makefile  cmake_install.cmake
Armageddon 2.0/Shaders/: BillBoardPixel.hlsl  BillBoardVertex.hlsl  BloomDownSamplePixel.hlsl  BloomThresholdPixel.hlsl  BloomThresholdVertex.hlsl  BloomUpsample.hlsl  CombinePixel.hlsl  CubemapConvolutionPixel.hlsl  CubemapConvolutionVertex.hlsl  DefaultPixelShader.hlsl  DefaultVertexShader.hlsl  DisplayPixel.hlsl  DisplayVertex.hlsl  EquirectangularToCubemapPixel.hlsl  EquirectangularToCubemapVertex.hlsl  PBR.hlsl  PreFilteHDRPixel.hlsl  ShadowMapPixel.hlsl  ShadowMapVertex.hlsl  SkyBoxPixel.hlsl  SkyBoxVertex.hlsl  Tonemap.hlsli  VolumetricDensityAndLight.hlsl  VolumetricFog.hlsl  VolumetricRaymarching.hlsl  WaterPixel.hlsl  WaterVertex.hlsl
Armageddon 2.0/lib/debug/: LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXTask_static_64.lib  SampleFramework_static_64.lib  SamplePlatform_static_64.lib  SamplesToolkit_static_64.lib  Samples_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib  assimp-vc142-mtd.exp  assimp-vc142-mtd.lib
Armageddon 2.0/lib/release/: DirectXTex.lib  LowLevelAABB_static_64.lib  LowLevel_static_64.lib  PhysXCharacterKinematic_static_64.lib  PhysXPvdSDK_static_64.lib  PhysXTask_static_64.lib  SampleBase_static_64.lib  SampleFramework_static_64.lib  SamplePlatform_static_64.lib  SamplesToolkit_static_64.lib  SceneQuery_static_64.lib  SnippetRender_static_64.lib  SnippetUtils_static_64.lib  assimp-vc142-mt.exp  assimp-vc142-mt.lib  yaml-cpp.lib
Armageddon 2.0/src/: Application.cpp  Application.h  Log.cpp  Log.h  Macros.h  Main.h
Armageddon 2.0/src/Animation/: Joint.cpp  Joint.h
Armageddon 2.0/src/Material/: AssetManager.cpp  AssetManager.h  Material.cpp  Material.h  Texture.cpp  Texture.h
Armageddon 2.0/src/Physics/: PhysXUtils.cpp  PhysXUtils.h  PhysicActor.cpp  PhysicActor.h  PhysicsEngine.cpp  PhysicsEngine.h
Armageddon 2.0/src/Renderer/: AdaptaterData.cpp  AdaptaterData.h  CascadeShadow.cpp  CascadeShadow.h  ConstantBuffer.h  ConstantBufferTypes.h  EnvMap.cpp  EnvMap.h  IndexBuffer.h  Interface.cpp  Interface.h  Lights.h  Mesh.cpp  Mesh.h  OffScreenRenderTargetView.cpp  OffScreenRenderTargetView.h  Primitives.cpp  Primitives.h  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shaders.cpp  Shaders.h  SubMesh.cpp  SubMesh.h  Vertex.h  VertexBuffer.h  VolumetricFog.cpp  VolumetricFog.h
Armageddon 2.0/src/Renderer/Animation/: Joint.h
Armageddon 2.0/src/Renderer/Camera/: Camera.cpp  Camera.h
Armageddon 2.0/src/Renderer/DirectX11/: DirectX11Renderer.cpp  DirectX11Renderer.h
Armageddon 2.0/src/Renderer/PostProcessing/: Bloom.cpp  Bloom.h
Armageddon 2.0/src/Renderer/RenderPass/: CascadeShadow.cpp  CascadeShadow.h  EnvMap.cpp  EnvMap.h  VolumetricFog.cpp  VolumetricFog.h
Armageddon 2.0/src/Renderer/RenderPass/PostProcessing/: Bloom.cpp  Bloom.h
Armageddon 2.0/src/Renderer/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
Armageddon 2.0/src/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  Serializer.cpp  Serializer.h
Armageddon 2.0/src/Scripting/: InternalsCall.cpp  InternalsCall.h  ScriptEngine.cpp  ScriptEngine.h
Armageddon 2.0/src/Serialization/: Tokenizer.cpp  Tokenizer.h
Armageddon 2.0/src/Utils/: HashUtils.h  Timer.cpp  Timer.h
Armageddon 2.0/src/Window/: GlfwWindow.cpp  GlfwWindow.h  KeyBoard.cpp  KeyBoard.h  Win32Window.cpp  Win32Window.h  Window.cpp  Window.h  WindowInterface.h
Armageddon 2.0/src/Window/Events/: Event.h  KeyBoardEvents.cpp  KeyBoardEvents.h  MouseEvent.cpp  MouseEvent.h
Armageddon Editor/: Armageddon Editor.vcxproj  Armageddon Editor.vcxproj.filters  Armageddon-Editor  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini
Armageddon Editor/Assets/Models/: Cube.fbx
Armageddon Editor/Assets/Scenes/: LightTestScene.mat  TestScene.mat
Armageddon Editor/Assets/Texture/: DefaultNormal.tif  default_gloss.tif  default_specular.tif  imgui.ini
Armageddon Editor/includes/imgui-docking/: imgui.cpp
Armageddon Editor/lib/: Makefile  cmake_install.cmake
Armageddon Editor/lib/debug/: Armageddon 2.0.lib
Armageddon Editor/lib/includes/assimp/: Makefile  assimp.pc  cmake_install.cmake  revision.h
Armageddon Editor/lib/includes/assimp/code/: Makefile  cmake_install.cmake
Armageddon Editor/lib/includes/assimp/tools/assimp_cmd/: Makefile  cmake_install.cmake
Armageddon Editor/lib/includes/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
Armageddon Editor/lib/includes/glfw/src/: Makefile  cmake_install.cmake
Armageddon Editor/lib/includes/glm/: Makefile  cmake_install.cmake
Armageddon Editor/lib/includes/glm/glm/: Makefile  cmake_install.cmake
Armageddon Editor/lib/includes/spdlog/: Makefile  cmake_install.cmake
Armageddon Editor/lib/includes/yaml-cpp/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
Armageddon Editor/lib/includes/yaml-cpp/util/: CTestTestfile.cmake  Makefile  cmake_install.cmake  parse  read  sandbox
Armageddon Editor/lib/release/: Armageddon 2.0.lib
Armageddon Editor/src/: Editor.cpp
Armageddon Editor/src/Panel/: BoneDebug.cpp  BoneDebug.h  ContentBrowser.cpp  ContentBrowser.h  EntityList.cpp  EntityList.h  EntityProperties.cpp  EntityProperties.h  MaterialEditor.cpp  MaterialEditor.h  OuputLog.cpp  OuputLog.h  RessourceManager.cpp  RessourceManager.h
Armageddon-Runtime/: Armageddon-Runtime.vcxproj  Armageddon-Runtime.vcxproj.filters  CMakeLists.txt  Makefile  cmake_install.cmake  imgui.ini
Armageddon-Runtime/lib/: Armageddon 2.0.lib
Armageddon-Runtime/src/: Application.cpp
Armageddon-Script/: Armageddon-Script.csproj  Entity.cs  Input.cs  Log.cs  Main.cs
Armageddon-Script/Math/: Math.cs
